# advising-assistance-cpp

./: CMakeLists.txt  README.md  catalog.cpp  main_cli.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.hpp  models.cpp  models.hpp
data/: CS 300 ABCU_Advising_Program_Input.csv
include/catalog/: catalog.hpp
include/gui/: mainwindow.hpp  models.hpp
src/catalog/: catalog.cpp
src/cli/: main_cli.cpp
src/gui/: main_gui.cpp  mainwindow.cpp  models.cpp
